--- a/templates/form.html
+++ b/templates/form.html
@@ -3,33 +3,25 @@
 <form action="{{url_for('predict_datapoint')}}" method="POST">
     <div class="form-group">
         <label for="Item_Weight">Item_Weight:</label>
-        <input type="text" id="Item_Weight" name="Item_Weight" placeholder="Enter Item_Weight value (float)">
+        <input type="text" id="Item_Weight" name="Item_Weight" placeholder="Enter Item_Weight value" (float)>
     </div>
 
     <div class="form-group">
         <label for="  Item_Visibility ">  Item_Visibility :</label>
-        <input type="text" id="  Item_Visibility " name="  Item_Visibility " placeholder="Enter   Item_Visibility value (float)">
+        <input type="text" id="  Item_Visibility " name="  Item_Visibility " placeholder="Enter   Item_Visibility value" (float)>
     </div>
 
     <div class="form-group">  
         <label for=" Item_MRP  ">Table:</label>
-        <input type="text" id=" Item_MRP  " name=" Item_MRP  " placeholder="Enter  Item_MRP  value (float)">
+        <input type="text" id=" Item_MRP  " name=" Item_MRP  " placeholder="Enter  Item_MRP  value "(float)>
     </div>
     
     <div class="form-group">
-        <label for="x">x:</label>
-        <input type="text" id="x" name="x" placeholder="Enter x value (float)">
+        <label for=" Outlet_Years"> Outlet_Years:</label>
+        <input type="text" id=" Outlet_Years" name=" Outlet_Years" placeholder="Enter  Outlet_Years value"(float)>
     </div>
   
-    <div class="form-group">
-        <label for="y">y:</label>
-        <input type="text" id="y" name="y" placeholder="Enter y value (float)">
-    </div>
-  
-    <div class="form-group">
-        <label for="z">z:</label>
-        <input type="text" id="z" name="z" placeholder="Enter z value (float)">
-    </div>         
+    
   
 <div class="form-group">
   <label for=" Item_Fat_Content"> Item_Fat_Content:</label>
