--- a/templates/form.html
+++ b/templates/form.html
@@ -3,22 +3,22 @@
 <form action="{{url_for('predict_datapoint')}}" method="POST">
     <div class="form-group">
         <label for="Item_Weight">Item_Weight:</label>
-        <input type="text" id="Item_Weight" name="Item_Weight" placeholder="Enter Item_Weight value" (float)>
+        <input type="text" id="Item_Weight" name="Item_Weight" placeholder="Enter Item_Weight value(float)">
     </div>
 
     <div class="form-group">
-        <label for="  Item_Visibility ">  Item_Visibility :</label>
-        <input type="text" id="  Item_Visibility " name="  Item_Visibility " placeholder="Enter   Item_Visibility value" (float)>
+        <label for="Item_Visibility">Item_Visibility :</label>
+        <input type="text" id="Item_Visibility" name="Item_Visibility" placeholder="Enter Item_Visibility value(float)">
     </div>
 
     <div class="form-group">  
-        <label for=" Item_MRP  ">Table:</label>
-        <input type="text" id=" Item_MRP  " name=" Item_MRP  " placeholder="Enter  Item_MRP  value "(float)>
+        <label for="Item_MRP">Item_MRP:</label>
+        <input type="text" id="Item_MRP" name="Item_MRP" placeholder="Enter Item_MRP value(float)">
     </div>
     
     <div class="form-group">
-        <label for=" Outlet_Years"> Outlet_Years:</label>
-        <input type="text" id=" Outlet_Years" name=" Outlet_Years" placeholder="Enter  Outlet_Years value"(float)>
+        <label for="Outlet_Years"> Outlet_Years:</label>
+        <input type="text" id="Outlet_Years" name="Outlet_Years" placeholder="Enter Outlet_Years value(float)">
     </div>
   
     
@@ -28,9 +28,7 @@
   <select id=" Item_Fat_Content" name=" Item_Fat_Content">
     <option value="Low Fat">Low Fat</option>
     <option value="Regular">Regular</option>
-    <option value="low fat">low fat</option>
-    <option value="LF">LF</option>
-    <option value="reg">reg</option>
+   
   </select>
 </div>
   
